Implement interactivity utilities.

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -46,17 +46,18 @@
     "│   ├── base.ipynb       # Base classes, types, and protocols for Tailwind CSS abstractions\n",
     "│   ├── resources.ipynb  # CDN resources and headers for Tailwind CSS\n",
     "│   └── testing.ipynb    # Standardized test page creation for Jupyter notebooks with FastHTML\n",
-    "└── utilities/ (7)\n",
+    "└── utilities/ (8)\n",
     "    ├── backgrounds.ipynb       # Background utilities for Tailwind CSS\n",
     "    ├── filters.ipynb           # Filter utilities for Tailwind CSS\n",
     "    ├── flexbox_and_grid.ipynb  # Flexbox and CSS Grid utilities for Tailwind CSS\n",
+    "    ├── interactivity.ipynb     # Interactivity utilities for Tailwind CSS\n",
     "    ├── layout.ipynb            # Display, position, overflow, z-index and other layout utilities for Tailwind CSS\n",
     "    ├── sizing.ipynb            # Width, height, and min/max sizing utilities for Tailwind CSS\n",
     "    ├── spacing.ipynb           # Padding and margin utilities for Tailwind CSS\n",
     "    └── svg.ipynb               # SVG utilities for Tailwind CSS\n",
     "```\n",
     "\n",
-    "Total: 22 notebooks across 4 directories"
+    "Total: 23 notebooks across 4 directories"
    ]
   },
   {
@@ -85,6 +86,7 @@
     "    utilities_backgrounds[utilities.backgrounds<br/>backgrounds]\n",
     "    utilities_filters[utilities.filters<br/>filters]\n",
     "    utilities_flexbox_and_grid[utilities.flexbox_and_grid<br/>flexbox_and_grid]\n",
+    "    utilities_interactivity[utilities.interactivity<br/>interactivity]\n",
     "    utilities_layout[utilities.layout<br/>layout]\n",
     "    utilities_sizing[utilities.sizing<br/>sizing]\n",
     "    utilities_spacing[utilities.spacing<br/>spacing]\n",
@@ -93,56 +95,59 @@
     "    builders_colors --> core_base\n",
     "    builders_scales --> core_base\n",
     "    cli_example_discovery --> cli_utils\n",
-    "    cli_explorer --> cli_core_utils_discovery\n",
-    "    cli_explorer --> cli_factory_extraction\n",
-    "    cli_explorer --> cli_utils\n",
     "    cli_explorer --> cli_helper_discovery\n",
-    "    cli_explorer --> cli_search\n",
+    "    cli_explorer --> cli_utils\n",
     "    cli_explorer --> cli_pattern_scanner\n",
+    "    cli_explorer --> cli_factory_extraction\n",
     "    cli_explorer --> cli_test_code\n",
-    "    cli_explorer --> cli_imports\n",
+    "    cli_explorer --> cli_search\n",
     "    cli_explorer --> cli_example_discovery\n",
+    "    cli_explorer --> cli_core_utils_discovery\n",
+    "    cli_explorer --> cli_imports\n",
     "    cli_factory_extraction --> cli_utils\n",
     "    cli_factory_extraction --> core_base\n",
-    "    cli_helper_discovery --> cli_example_discovery\n",
     "    cli_helper_discovery --> cli_utils\n",
-    "    cli_imports --> cli_core_utils_discovery\n",
-    "    cli_imports --> cli_helper_discovery\n",
-    "    cli_imports --> cli_factory_extraction\n",
+    "    cli_helper_discovery --> cli_example_discovery\n",
     "    cli_imports --> cli_utils\n",
+    "    cli_imports --> cli_helper_discovery\n",
+    "    cli_imports --> cli_core_utils_discovery\n",
+    "    cli_imports --> cli_factory_extraction\n",
     "    cli_search --> cli_utils\n",
-    "    cli_search --> cli_example_discovery\n",
     "    cli_search --> cli_helper_discovery\n",
     "    cli_search --> cli_factory_extraction\n",
+    "    cli_search --> cli_example_discovery\n",
+    "    cli_test_code --> cli_utils\n",
     "    cli_test_code --> cli_helper_discovery\n",
     "    cli_test_code --> cli_factory_extraction\n",
-    "    cli_test_code --> cli_utils\n",
-    "    core_testing --> utilities_sizing\n",
     "    core_testing --> utilities_layout\n",
-    "    core_testing --> utilities_flexbox_and_grid\n",
-    "    core_testing --> core_resources\n",
     "    core_testing --> utilities_spacing\n",
+    "    core_testing --> utilities_flexbox_and_grid\n",
+    "    core_testing --> utilities_sizing\n",
     "    core_testing --> core_base\n",
+    "    core_testing --> core_resources\n",
     "    utilities_backgrounds --> core_base\n",
     "    utilities_backgrounds --> builders_colors\n",
     "    utilities_backgrounds --> builders_scales\n",
-    "    utilities_filters --> builders_colors\n",
     "    utilities_filters --> core_base\n",
+    "    utilities_filters --> builders_colors\n",
     "    utilities_filters --> builders_scales\n",
-    "    utilities_flexbox_and_grid --> builders_scales\n",
     "    utilities_flexbox_and_grid --> core_base\n",
-    "    utilities_layout --> builders_scales\n",
+    "    utilities_flexbox_and_grid --> builders_scales\n",
+    "    utilities_interactivity --> core_base\n",
+    "    utilities_interactivity --> builders_colors\n",
+    "    utilities_interactivity --> builders_scales\n",
     "    utilities_layout --> core_base\n",
-    "    utilities_sizing --> builders_scales\n",
+    "    utilities_layout --> builders_scales\n",
     "    utilities_sizing --> core_base\n",
-    "    utilities_spacing --> builders_scales\n",
+    "    utilities_sizing --> builders_scales\n",
     "    utilities_spacing --> core_base\n",
+    "    utilities_spacing --> builders_scales\n",
     "    utilities_svg --> core_base\n",
-    "    utilities_svg --> builders_scales\n",
     "    utilities_svg --> builders_colors\n",
+    "    utilities_svg --> builders_scales\n",
     "```\n",
     "\n",
-    "*50 cross-module dependencies detected*"
+    "*53 cross-module dependencies detected*"
    ]
   },
   {
@@ -2246,6 +2251,192 @@
     ") -> List[str]:  # List of import statements\n",
     "    \"Get recommended import statements for using the library.\"\n",
     "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### interactivity (`interactivity.ipynb`)\n",
+    "> Interactivity utilities for Tailwind CSS\n",
+    "\n",
+    "#### Import\n",
+    "\n",
+    "```python\n",
+    "from cjm_fasthtml_tailwind.utilities.interactivity import (\n",
+    "    accent,\n",
+    "    appearance,\n",
+    "    caret,\n",
+    "    scheme,\n",
+    "    cursor,\n",
+    "    field_sizing,\n",
+    "    pointer_events,\n",
+    "    resize,\n",
+    "    scroll,\n",
+    "    scroll_m,\n",
+    "    scroll_ms,\n",
+    "    scroll_me,\n",
+    "    scroll_p,\n",
+    "    scroll_ps,\n",
+    "    scroll_pe,\n",
+    "    snap_align,\n",
+    "    snap_stop,\n",
+    "    snap,\n",
+    "    touch,\n",
+    "    select,\n",
+    "    will_change,\n",
+    "    test_interactivity_accent_examples,\n",
+    "    test_interactivity_appearance_examples,\n",
+    "    test_interactivity_caret_examples,\n",
+    "    test_interactivity_scheme_examples,\n",
+    "    CursorFactory,\n",
+    "    test_interactivity_cursor_examples,\n",
+    "    test_interactivity_field_sizing_examples,\n",
+    "    test_interactivity_pointer_events_examples,\n",
+    "    test_interactivity_resize_examples,\n",
+    "    test_interactivity_scroll_behavior_examples,\n",
+    "    test_interactivity_scroll_margin_examples,\n",
+    "    test_interactivity_scroll_padding_examples,\n",
+    "    test_interactivity_scroll_snap_examples,\n",
+    "    test_interactivity_touch_action_examples,\n",
+    "    test_interactivity_user_select_examples,\n",
+    "    WillChangeFactory,\n",
+    "    test_interactivity_will_change_examples,\n",
+    "    test_interactivity_form_examples,\n",
+    "    test_interactivity_touch_mobile_examples,\n",
+    "    test_interactivity_factory_documentation,\n",
+    "    test_interactivity_advanced_examples\n",
+    ")\n",
+    "```\n",
+    "\n",
+    "#### Functions\n",
+    "\n",
+    "```python\n",
+    "def test_interactivity_accent_examples()\n",
+    "    \"Test accent color utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_interactivity_appearance_examples()\n",
+    "    \"Test appearance utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_interactivity_caret_examples()\n",
+    "    \"Test caret color utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_interactivity_scheme_examples()\n",
+    "    \"Test color scheme utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_interactivity_cursor_examples()\n",
+    "    \"Test cursor utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_interactivity_field_sizing_examples()\n",
+    "    \"Test field sizing utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_interactivity_pointer_events_examples()\n",
+    "    \"Test pointer events utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_interactivity_resize_examples()\n",
+    "    \"Test resize utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_interactivity_scroll_behavior_examples()\n",
+    "    \"Test scroll behavior utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_interactivity_scroll_margin_examples()\n",
+    "    \"Test scroll margin utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_interactivity_scroll_padding_examples()\n",
+    "    \"Test scroll padding utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_interactivity_scroll_snap_examples()\n",
+    "    \"Test scroll snap utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_interactivity_touch_action_examples()\n",
+    "    \"Test touch action utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_interactivity_user_select_examples()\n",
+    "    \"Test user select utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_interactivity_will_change_examples()\n",
+    "    \"Test will-change utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_interactivity_form_examples()\n",
+    "    \"Test interactivity utilities in form components.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_interactivity_scroll_snap_examples()\n",
+    "    \"Test scroll snap utilities in carousel/gallery components.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_interactivity_touch_mobile_examples()\n",
+    "    \"Test touch and mobile interaction utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_interactivity_factory_documentation()\n",
+    "    \"Test that interactivity factories have accessible documentation.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_interactivity_advanced_examples()\n",
+    "    \"Test advanced combinations of interactivity utilities.\"\n",
+    "```\n",
+    "\n",
+    "#### Classes\n",
+    "\n",
+    "```python\n",
+    "class CursorFactory(SimpleFactory):\n",
+    "    \"Factory for cursor utilities with arbitrary value support.\"\n",
+    "    \n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "class WillChangeFactory(SimpleFactory):\n",
+    "    \"Factory for will-change utilities with arbitrary value support.\"\n",
+    "    \n",
+    "```\n",
+    "\n",
+    "#### Variables\n",
+    "\n",
+    "```python\n",
+    "accent  # The accent color factory\n",
+    "caret  # The caret color factory\n",
+    "scroll_m  # The scroll margin factory\n",
+    "scroll_ms  # scroll-margin-inline-start\n",
+    "scroll_me  # scroll-margin-inline-end\n",
+    "scroll_p  # The scroll padding factory\n",
+    "scroll_ps  # scroll-padding-inline-start\n",
+    "scroll_pe  # scroll-padding-inline-end\n",
+    "```"
    ]
   },
   {
