--- a/nbs/utilities/svg.ipynb
+++ b/nbs/utilities/svg.ipynb
@@ -265,6 +265,30 @@
     "    assert str(stroke.blue._300) == \"stroke-blue-300\"\n",
     "    assert str(stroke.green._700) == \"stroke-green-700\"\n",
     "    assert str(stroke.purple._400) == \"stroke-purple-400\"\n",
+    "\n",
+    "    # Test all 22 color families\n",
+    "    assert str(stroke.red._500) == \"stroke-red-500\"\n",
+    "    assert str(stroke.orange._500) == \"stroke-orange-500\"\n",
+    "    assert str(stroke.amber._500) == \"stroke-amber-500\"\n",
+    "    assert str(stroke.yellow._500) == \"stroke-yellow-500\"\n",
+    "    assert str(stroke.lime._500) == \"stroke-lime-500\"\n",
+    "    assert str(stroke.green._500) == \"stroke-green-500\"\n",
+    "    assert str(stroke.emerald._500) == \"stroke-emerald-500\"\n",
+    "    assert str(stroke.teal._500) == \"stroke-teal-500\"\n",
+    "    assert str(stroke.cyan._500) == \"stroke-cyan-500\"\n",
+    "    assert str(stroke.sky._500) == \"stroke-sky-500\"\n",
+    "    assert str(stroke.blue._500) == \"stroke-blue-500\"\n",
+    "    assert str(stroke.indigo._500) == \"stroke-indigo-500\"\n",
+    "    assert str(stroke.violet._500) == \"stroke-violet-500\"\n",
+    "    assert str(stroke.purple._500) == \"stroke-purple-500\"\n",
+    "    assert str(stroke.fuchsia._500) == \"stroke-fuchsia-500\"\n",
+    "    assert str(stroke.pink._500) == \"stroke-pink-500\"\n",
+    "    assert str(stroke.rose._500) == \"stroke-rose-500\"\n",
+    "    assert str(stroke.slate._500) == \"stroke-slate-500\"\n",
+    "    assert str(stroke.gray._500) == \"stroke-gray-500\"\n",
+    "    assert str(stroke.zinc._500) == \"stroke-zinc-500\"\n",
+    "    assert str(stroke.neutral._500) == \"stroke-neutral-500\"\n",
+    "    assert str(stroke.stone._500) == \"stroke-stone-500\"\n",
     "    \n",
     "    # Test special colors\n",
     "    assert str(stroke_none) == \"stroke-none\"\n",
