--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -46,7 +46,7 @@
     "│   ├── base.ipynb       # Base classes, types, and protocols for Tailwind CSS abstractions\n",
     "│   ├── resources.ipynb  # CDN resources and headers for Tailwind CSS\n",
     "│   └── testing.ipynb    # Standardized test page creation for Jupyter notebooks with FastHTML\n",
-    "└── utilities/ (8)\n",
+    "└── utilities/ (9)\n",
     "    ├── backgrounds.ipynb       # Background utilities for Tailwind CSS\n",
     "    ├── filters.ipynb           # Filter utilities for Tailwind CSS\n",
     "    ├── flexbox_and_grid.ipynb  # Flexbox and CSS Grid utilities for Tailwind CSS\n",
@@ -54,10 +54,11 @@
     "    ├── layout.ipynb            # Display, position, overflow, z-index and other layout utilities for Tailwind CSS\n",
     "    ├── sizing.ipynb            # Width, height, and min/max sizing utilities for Tailwind CSS\n",
     "    ├── spacing.ipynb           # Padding and margin utilities for Tailwind CSS\n",
-    "    └── svg.ipynb               # SVG utilities for Tailwind CSS\n",
+    "    ├── svg.ipynb               # SVG utilities for Tailwind CSS\n",
+    "    └── typography.ipynb        # Typography utilities for Tailwind CSS\n",
     "```\n",
     "\n",
-    "Total: 23 notebooks across 4 directories"
+    "Total: 24 notebooks across 4 directories"
    ]
   },
   {
@@ -91,63 +92,67 @@
     "    utilities_sizing[utilities.sizing<br/>sizing]\n",
     "    utilities_spacing[utilities.spacing<br/>spacing]\n",
     "    utilities_svg[utilities.svg<br/>svg]\n",
+    "    utilities_typography[utilities.typography<br/>typography]\n",
     "\n",
     "    builders_colors --> core_base\n",
     "    builders_scales --> core_base\n",
     "    cli_example_discovery --> cli_utils\n",
-    "    cli_explorer --> cli_helper_discovery\n",
+    "    cli_explorer --> cli_search\n",
     "    cli_explorer --> cli_utils\n",
     "    cli_explorer --> cli_pattern_scanner\n",
+    "    cli_explorer --> cli_imports\n",
     "    cli_explorer --> cli_factory_extraction\n",
     "    cli_explorer --> cli_test_code\n",
-    "    cli_explorer --> cli_search\n",
+    "    cli_explorer --> cli_helper_discovery\n",
     "    cli_explorer --> cli_example_discovery\n",
     "    cli_explorer --> cli_core_utils_discovery\n",
-    "    cli_explorer --> cli_imports\n",
-    "    cli_factory_extraction --> cli_utils\n",
     "    cli_factory_extraction --> core_base\n",
-    "    cli_helper_discovery --> cli_utils\n",
+    "    cli_factory_extraction --> cli_utils\n",
     "    cli_helper_discovery --> cli_example_discovery\n",
+    "    cli_helper_discovery --> cli_utils\n",
     "    cli_imports --> cli_utils\n",
     "    cli_imports --> cli_helper_discovery\n",
     "    cli_imports --> cli_core_utils_discovery\n",
     "    cli_imports --> cli_factory_extraction\n",
     "    cli_search --> cli_utils\n",
+    "    cli_search --> cli_example_discovery\n",
     "    cli_search --> cli_helper_discovery\n",
     "    cli_search --> cli_factory_extraction\n",
-    "    cli_search --> cli_example_discovery\n",
     "    cli_test_code --> cli_utils\n",
     "    cli_test_code --> cli_helper_discovery\n",
     "    cli_test_code --> cli_factory_extraction\n",
-    "    core_testing --> utilities_layout\n",
-    "    core_testing --> utilities_spacing\n",
-    "    core_testing --> utilities_flexbox_and_grid\n",
     "    core_testing --> utilities_sizing\n",
+    "    core_testing --> utilities_layout\n",
+    "    core_testing --> utilities_flexbox_and_grid\n",
     "    core_testing --> core_base\n",
+    "    core_testing --> utilities_spacing\n",
     "    core_testing --> core_resources\n",
-    "    utilities_backgrounds --> core_base\n",
     "    utilities_backgrounds --> builders_colors\n",
+    "    utilities_backgrounds --> core_base\n",
     "    utilities_backgrounds --> builders_scales\n",
-    "    utilities_filters --> core_base\n",
     "    utilities_filters --> builders_colors\n",
     "    utilities_filters --> builders_scales\n",
-    "    utilities_flexbox_and_grid --> core_base\n",
+    "    utilities_filters --> core_base\n",
     "    utilities_flexbox_and_grid --> builders_scales\n",
+    "    utilities_flexbox_and_grid --> core_base\n",
+    "    utilities_interactivity --> builders_scales\n",
     "    utilities_interactivity --> core_base\n",
     "    utilities_interactivity --> builders_colors\n",
-    "    utilities_interactivity --> builders_scales\n",
-    "    utilities_layout --> core_base\n",
     "    utilities_layout --> builders_scales\n",
+    "    utilities_layout --> core_base\n",
     "    utilities_sizing --> core_base\n",
     "    utilities_sizing --> builders_scales\n",
     "    utilities_spacing --> core_base\n",
     "    utilities_spacing --> builders_scales\n",
-    "    utilities_svg --> core_base\n",
     "    utilities_svg --> builders_colors\n",
     "    utilities_svg --> builders_scales\n",
+    "    utilities_svg --> core_base\n",
+    "    utilities_typography --> builders_colors\n",
+    "    utilities_typography --> builders_scales\n",
+    "    utilities_typography --> core_base\n",
     "```\n",
     "\n",
-    "*53 cross-module dependencies detected*"
+    "*56 cross-module dependencies detected*"
    ]
   },
   {
@@ -4048,6 +4053,408 @@
     "        server.stop()\n",
     "    \"\"\"\n",
     "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### typography (`typography.ipynb`)\n",
+    "> Typography utilities for Tailwind CSS\n",
+    "\n",
+    "#### Import\n",
+    "\n",
+    "```python\n",
+    "from cjm_fasthtml_tailwind.utilities.typography import (\n",
+    "    font,\n",
+    "    TEXT_SIZE_CONFIG,\n",
+    "    text,\n",
+    "    antialiased,\n",
+    "    subpixel_antialiased,\n",
+    "    italic,\n",
+    "    not_italic,\n",
+    "    TRACKING_CONFIG,\n",
+    "    tracking,\n",
+    "    LINE_CLAMP_CONFIG,\n",
+    "    line_clamp,\n",
+    "    LEADING_CONFIG,\n",
+    "    leading,\n",
+    "    list_position,\n",
+    "    list_style,\n",
+    "    text_align,\n",
+    "    underline,\n",
+    "    overline,\n",
+    "    line_through,\n",
+    "    no_underline,\n",
+    "    decoration,\n",
+    "    decoration_style,\n",
+    "    DECORATION_THICKNESS_CONFIG,\n",
+    "    decoration_thickness,\n",
+    "    UNDERLINE_OFFSET_CONFIG,\n",
+    "    underline_offset,\n",
+    "    uppercase,\n",
+    "    lowercase,\n",
+    "    capitalize,\n",
+    "    normal_case,\n",
+    "    truncate,\n",
+    "    text_ellipsis,\n",
+    "    text_clip,\n",
+    "    text_wrap,\n",
+    "    text_nowrap,\n",
+    "    text_balance,\n",
+    "    text_pretty,\n",
+    "    indent,\n",
+    "    align,\n",
+    "    whitespace,\n",
+    "    break_normal,\n",
+    "    break_all,\n",
+    "    break_keep,\n",
+    "    wrap_break_word,\n",
+    "    wrap_anywhere,\n",
+    "    wrap_normal,\n",
+    "    hyphens,\n",
+    "    test_typography_font_family_examples,\n",
+    "    test_typography_font_size_examples,\n",
+    "    test_typography_font_smoothing_examples,\n",
+    "    test_typography_font_style_examples,\n",
+    "    FontFactory,\n",
+    "    test_typography_font_weight_examples,\n",
+    "    test_typography_spacing_examples,\n",
+    "    LineClampFactory,\n",
+    "    test_typography_line_clamp_examples,\n",
+    "    LeadingFactory,\n",
+    "    test_typography_line_height_examples,\n",
+    "    test_typography_list_styles_examples,\n",
+    "    test_typography_text_alignment_examples,\n",
+    "    TextFactory,\n",
+    "    test_typography_text_color_examples,\n",
+    "    test_typography_text_decoration_examples,\n",
+    "    test_typography_underline_offset_examples,\n",
+    "    test_typography_text_transform_examples,\n",
+    "    test_typography_text_overflow_examples,\n",
+    "    test_typography_text_wrap_examples,\n",
+    "    test_typography_text_indent_examples,\n",
+    "    test_typography_vertical_align_examples,\n",
+    "    test_typography_whitespace_examples,\n",
+    "    test_typography_word_break_examples,\n",
+    "    test_typography_overflow_wrap_examples,\n",
+    "    test_typography_hyphens_examples,\n",
+    "    test_typography_practical_examples,\n",
+    "    test_typography_factory_documentation\n",
+    ")\n",
+    "```\n",
+    "\n",
+    "#### Functions\n",
+    "\n",
+    "```python\n",
+    "def test_typography_font_family_examples()\n",
+    "    \"Test font family utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_typography_font_size_examples()\n",
+    "    \"Test font size utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_typography_font_smoothing_examples()\n",
+    "    \"Test font smoothing utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_typography_font_style_examples()\n",
+    "    \"Test font style utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_typography_font_weight_examples()\n",
+    "    \"Test font weight utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_typography_font_stretch_examples()\n",
+    "    \"Test font stretch utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_typography_font_variant_numeric_examples()\n",
+    "    \"Test font variant numeric utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_typography_spacing_examples()\n",
+    "    \"Test letter spacing utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_typography_line_clamp_examples()\n",
+    "    \"Test line clamp utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_typography_line_height_examples()\n",
+    "    \"Test line height utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_typography_list_image_examples()\n",
+    "    \"Test list style image utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_typography_list_styles_examples()\n",
+    "    \"Test list styles utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_typography_text_alignment_examples()\n",
+    "    \"Test text alignment utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_typography_text_color_examples()\n",
+    "    \"Test text color utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_typography_text_decoration_examples()\n",
+    "    \"Test text decoration utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_typography_underline_offset_examples()\n",
+    "    \"Test underline offset utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_typography_text_transform_examples()\n",
+    "    \"Test text transform utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_typography_text_overflow_examples()\n",
+    "    \"Test text overflow utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_typography_text_wrap_examples()\n",
+    "    \"Test text wrap utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_typography_text_indent_examples()\n",
+    "    \"Test text indent utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_typography_vertical_align_examples()\n",
+    "    \"Test vertical align utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_typography_whitespace_examples()\n",
+    "    \"Test whitespace utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_typography_word_break_examples()\n",
+    "    \"Test word break utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_typography_overflow_wrap_examples()\n",
+    "    \"Test overflow wrap utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_typography_hyphens_examples()\n",
+    "    \"Test hyphens utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_typography_content_examples()\n",
+    "    \"Test content utilities for pseudo-elements.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_typography_practical_examples()\n",
+    "    \"Test typography utilities in practical FastHTML component examples.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_typography_factory_documentation()\n",
+    "    \"Test that typography factories have accessible documentation.\"\n",
+    "```\n",
+    "\n",
+    "#### Classes\n",
+    "\n",
+    "```python\n",
+    "class FontFactory:\n",
+    "    def __init__(self)\n",
+    "    \"Factory for font utilities including family and weight.\"\n",
+    "    \n",
+    "    def __init__(self)\n",
+    "        \"Initialize font factory with families and weights.\"\n",
+    "    \n",
+    "    def get_info(\n",
+    "            self\n",
+    "        ) -> Dict[str, Any]:  # Factory information\n",
+    "        \"Get information about the font factory.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "class LineClampFactory(ScaledFactory):\n",
+    "    \"Factory for line clamp utilities.\"\n",
+    "    \n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "class LeadingFactory(ScaledFactory):\n",
+    "    \"Factory for line height utilities with restricted numeric range.\"\n",
+    "    \n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "class ListImageUtility(BaseUtility):\n",
+    "    \"Utility class for list-style-image with arbitrary value support.\"\n",
+    "    \n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "class ListImageFactory:\n",
+    "    def __init__(self):\n",
+    "        \"\"\"Initialize list image factory.\"\"\"\n",
+    "        super().__init__(\"List style image utilities for controlling list item marker images\")\n",
+    "        self.none = ListImageUtility(\"list-image\")\n",
+    "        self.none._value = \"none\"\n",
+    "    \n",
+    "    def __call__(\n",
+    "        self,\n",
+    "        value: str  # Image URL or value\n",
+    "    ) -> ListImageUtility:  # A list image utility instance\n",
+    "    \"Factory for list-style-image utilities.\"\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "            \"\"\"Initialize list image factory.\"\"\"\n",
+    "            super().__init__(\"List style image utilities for controlling list item marker images\")\n",
+    "            self.none = ListImageUtility(\"list-image\")\n",
+    "            self.none._value = \"none\"\n",
+    "        \n",
+    "        def __call__(\n",
+    "            self,\n",
+    "            value: str  # Image URL or value\n",
+    "        ) -> ListImageUtility:  # A list image utility instance\n",
+    "        \"Initialize list image factory.\"\n",
+    "    \n",
+    "    def get_info(\n",
+    "            self\n",
+    "        ) -> Dict[str, Any]:  # Factory information\n",
+    "        \"Get information about the list image factory.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "class TextFactory:\n",
+    "    def __init__(self)\n",
+    "    \"Enhanced text factory that supports both font sizes and text colors.\"\n",
+    "    \n",
+    "    def __init__(self)\n",
+    "        \"Initialize text factory with size support.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "class ContentUtility(BaseUtility):\n",
+    "    \"Utility class for content with arbitrary value support.\"\n",
+    "    \n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "class ContentFactory:\n",
+    "    def __init__(self):\n",
+    "        \"\"\"Initialize content factory.\"\"\"\n",
+    "        super().__init__(\"Content utilities for controlling before and after pseudo-element content\")\n",
+    "        self.none = ContentUtility(\"content\")\n",
+    "        self.none._value = \"none\"\n",
+    "    \n",
+    "    def __call__(\n",
+    "        self,\n",
+    "        value: str  # Content value\n",
+    "    ) -> ContentUtility:  # A content utility instance\n",
+    "    \"Factory for content utilities for pseudo-elements.\"\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "            \"\"\"Initialize content factory.\"\"\"\n",
+    "            super().__init__(\"Content utilities for controlling before and after pseudo-element content\")\n",
+    "            self.none = ContentUtility(\"content\")\n",
+    "            self.none._value = \"none\"\n",
+    "        \n",
+    "        def __call__(\n",
+    "            self,\n",
+    "            value: str  # Content value\n",
+    "        ) -> ContentUtility:  # A content utility instance\n",
+    "        \"Initialize content factory.\"\n",
+    "    \n",
+    "    def get_info(\n",
+    "            self\n",
+    "        ) -> Dict[str, Any]:  # Factory information\n",
+    "        \"Get information about the content factory.\"\n",
+    "```\n",
+    "\n",
+    "#### Variables\n",
+    "\n",
+    "```python\n",
+    "TEXT_SIZE_CONFIG\n",
+    "text  # Font size factory\n",
+    "antialiased  # Antialiased font smoothing\n",
+    "subpixel_antialiased  # Subpixel antialiased font smoothing\n",
+    "italic  # Italic font style\n",
+    "not_italic  # Normal font style\n",
+    "font  # Enhanced font factory for family and weight\n",
+    "normal_nums  # Normal numbers\n",
+    "ordinal  # Ordinal numbers\n",
+    "slashed_zero  # Slashed zero\n",
+    "lining_nums  # Lining numbers\n",
+    "oldstyle_nums  # Old-style numbers\n",
+    "proportional_nums  # Proportional numbers\n",
+    "tabular_nums  # Tabular numbers\n",
+    "diagonal_fractions  # Diagonal fractions\n",
+    "stacked_fractions  # Stacked fractions\n",
+    "TRACKING_CONFIG\n",
+    "tracking  # Letter spacing factory\n",
+    "LINE_CLAMP_CONFIG\n",
+    "line_clamp  # Line clamp factory\n",
+    "LEADING_CONFIG\n",
+    "leading  # Line height factory\n",
+    "list_image  # List image factory\n",
+    "text  # Enhanced text factory for size and color\n",
+    "underline  # Underline text\n",
+    "overline  # Overline text\n",
+    "line_through  # Line through text\n",
+    "no_underline  # No text decoration\n",
+    "decoration  # Text decoration color factory\n",
+    "DECORATION_THICKNESS_CONFIG\n",
+    "decoration_thickness  # Text decoration thickness factory\n",
+    "UNDERLINE_OFFSET_CONFIG\n",
+    "underline_offset  # Text underline offset factory\n",
+    "uppercase  # Uppercase text\n",
+    "lowercase  # Lowercase text\n",
+    "capitalize  # Capitalize text\n",
+    "normal_case  # Normal case text\n",
+    "truncate  # Truncate overflow text\n",
+    "text_ellipsis  # Text ellipsis\n",
+    "text_clip  # Text clip\n",
+    "text_wrap  # Text wrap\n",
+    "text_nowrap  # Text no wrap\n",
+    "text_balance  # Text balance\n",
+    "text_pretty  # Text pretty\n",
+    "indent  # Text indent factory\n",
+    "break_normal  # Normal word break\n",
+    "break_all  # Break all\n",
+    "break_keep  # Keep words together\n",
+    "wrap_break_word  # Break word wrap\n",
+    "wrap_anywhere  # Wrap anywhere\n",
+    "wrap_normal  # Normal wrap\n",
+    "content  # Content factory\n",
+    "```"
    ]
   },
   {
