Implement borders utilities.

--- a/nbs/utilities/effects.ipynb
+++ b/nbs/utilities/effects.ipynb
@@ -235,8 +235,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# Create the shadow factory instance\n",
-    "shadow = ShadowFactory(\"Box shadow utilities for adding depth to elements\")"
+    "shadow = ShadowFactory(\"Box shadow utilities for adding depth to elements\") # Create the shadow factory instance"
    ]
   },
   {
@@ -257,8 +256,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# Create shadow color factory using the existing ColoredFactory\n",
-    "shadow_color = ColoredFactory(\"shadow\", \"Shadow color utilities for customizing the color of box shadows\")"
+    "shadow_color = ColoredFactory(\"shadow\", \"Shadow color utilities for customizing the color of box shadows\") # Create shadow color factory using the existing ColoredFactory"
    ]
   },
   {
@@ -599,8 +597,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# Create the inset shadow factory instance\n",
-    "inset_shadow = InsetShadowFactory(\"Inset box shadow utilities for adding inner depth to elements\")"
+    "inset_shadow = InsetShadowFactory(\"Inset box shadow utilities for adding inner depth to elements\") # Create the inset shadow factory instance"
    ]
   },
   {
@@ -621,8 +618,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# Create inset shadow color factory using the existing ColoredFactory\n",
-    "inset_shadow_color = ColoredFactory(\"inset-shadow\", \"Inset shadow color utilities for customizing the color of inner box shadows\")"
+    "inset_shadow_color = ColoredFactory(\"inset-shadow\", \"Inset shadow color utilities for customizing the color of inner box shadows\") # Create inset shadow color factory using the existing ColoredFactory"
    ]
   },
   {
@@ -914,8 +910,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# Create the ring factory instance\n",
-    "ring = RingFactory(\"Ring (outline) utilities for adding focus rings and outlines to elements\")"
+    "ring = RingFactory(\"Ring (outline) utilities for adding focus rings and outlines to elements\") # Create the ring factory instance"
    ]
   },
   {
@@ -936,8 +931,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# Create ring color factory using the existing ColoredFactory\n",
-    "ring_color = ColoredFactory(\"ring\", \"Ring color utilities for customizing the color of focus rings and outlines\")"
+    "ring_color = ColoredFactory(\"ring\", \"Ring color utilities for customizing the color of focus rings and outlines\") # Create ring color factory using the existing ColoredFactory"
    ]
   },
   {
@@ -1217,8 +1211,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# Create the inset ring factory instance\n",
-    "inset_ring = InsetRingFactory(\"Inset ring (inner outline) utilities for adding inner focus rings and outlines to elements\")"
+    "inset_ring = InsetRingFactory(\"Inset ring (inner outline) utilities for adding inner focus rings and outlines to elements\") # Create the inset ring factory instance"
    ]
   },
   {
@@ -1239,8 +1232,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# Create inset ring color factory using the existing ColoredFactory\n",
-    "inset_ring_color = ColoredFactory(\"inset-ring\", \"Inset ring color utilities for customizing the color of inner focus rings and outlines\")"
+    "inset_ring_color = ColoredFactory(\"inset-ring\", \"Inset ring color utilities for customizing the color of inner focus rings and outlines\") # Create inset ring color factory using the existing ColoredFactory"
    ]
   },
   {
@@ -1542,8 +1534,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# Create the text shadow factory instance\n",
-    "text_shadow = TextShadowFactory(\"Text shadow utilities for adding shadows to text\")"
+    "text_shadow = TextShadowFactory(\"Text shadow utilities for adding shadows to text\") # Create the text shadow factory instance"
    ]
   },
   {
@@ -1564,8 +1555,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# Create text shadow color factory using the existing ColoredFactory\n",
-    "text_shadow_color = ColoredFactory(\"text-shadow\", \"Text shadow color utilities for customizing the color of text shadows\")"
+    "text_shadow_color = ColoredFactory(\"text-shadow\", \"Text shadow color utilities for customizing the color of text shadows\") # Create text shadow color factory using the existing ColoredFactory"
    ]
   },
   {
@@ -1858,8 +1848,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# Create the opacity factory instance\n",
-    "opacity = OpacityFactory(\"Opacity utilities for controlling element transparency\")"
+    "opacity = OpacityFactory(\"Opacity utilities for controlling element transparency\") # Create the opacity factory instance"
    ]
   },
   {
@@ -2306,8 +2295,7 @@
     "            }\n",
     "        }\n",
     "\n",
-    "# Create the basic mask image factory instance\n",
-    "mask = MaskImageFactory(\"Basic mask image utilities for controlling element masks\")"
+    "mask = MaskImageFactory(\"Basic mask image utilities for controlling element masks\") # Create the basic mask image factory instance"
    ]
   },
   {
@@ -2457,8 +2445,7 @@
     "            }\n",
     "        }\n",
     "\n",
-    "# Create the linear gradient mask factory instance\n",
-    "mask_linear = MaskLinearFactory(\"Linear gradient mask utilities for creating gradient-based masks\")"
+    "mask_linear = MaskLinearFactory(\"Linear gradient mask utilities for creating gradient-based masks\") # Create the linear gradient mask factory instance"
    ]
   },
   {
@@ -2640,29 +2627,23 @@
    "source": [
     "#| export\n",
     "# Create directional mask gradient factories\n",
-    "# Top direction\n",
-    "mask_t_from = MaskDirectionalFactory('t', 'from')\n",
-    "mask_t_to = MaskDirectionalFactory('t', 'to')\n",
+    "mask_t_from = MaskDirectionalFactory('t', 'from') # Top direction - from\n",
+    "mask_t_to = MaskDirectionalFactory('t', 'to') # Top direction - to\n",
     "\n",
-    "# Right direction  \n",
-    "mask_r_from = MaskDirectionalFactory('r', 'from')\n",
-    "mask_r_to = MaskDirectionalFactory('r', 'to')\n",
+    "mask_r_from = MaskDirectionalFactory('r', 'from') # Right direction - from\n",
+    "mask_r_to = MaskDirectionalFactory('r', 'to') # Right direction - to\n",
     "\n",
-    "# Bottom direction\n",
-    "mask_b_from = MaskDirectionalFactory('b', 'from')\n",
-    "mask_b_to = MaskDirectionalFactory('b', 'to')\n",
+    "mask_b_from = MaskDirectionalFactory('b', 'from') # Bottom direction - from\n",
+    "mask_b_to = MaskDirectionalFactory('b', 'to') # Bottom direction - to\n",
     "\n",
-    "# Left direction\n",
-    "mask_l_from = MaskDirectionalFactory('l', 'from')\n",
-    "mask_l_to = MaskDirectionalFactory('l', 'to')\n",
+    "mask_l_from = MaskDirectionalFactory('l', 'from') # Left direction - from\n",
+    "mask_l_to = MaskDirectionalFactory('l', 'to') # Left direction - to\n",
     "\n",
-    "# Horizontal (x) direction\n",
-    "mask_x_from = MaskDirectionalFactory('x', 'from')\n",
-    "mask_x_to = MaskDirectionalFactory('x', 'to')\n",
+    "mask_x_from = MaskDirectionalFactory('x', 'from') # Horizontal (x) direction - from\n",
+    "mask_x_to = MaskDirectionalFactory('x', 'to') # Horizontal (x) direction - to\n",
     "\n",
-    "# Vertical (y) direction\n",
-    "mask_y_from = MaskDirectionalFactory('y', 'from')\n",
-    "mask_y_to = MaskDirectionalFactory('y', 'to')"
+    "mask_y_from = MaskDirectionalFactory('y', 'from') # Vertical (y) direction - from\n",
+    "mask_y_to = MaskDirectionalFactory('y', 'to') # Vertical (y) direction - to"
    ]
   },
   {
@@ -2780,8 +2761,7 @@
     "            }\n",
     "        }\n",
     "\n",
-    "# Create the radial gradient mask factory instance\n",
-    "mask_radial = MaskRadialFactory(\"Radial gradient mask utilities for creating circular gradient-based masks\")"
+    "mask_radial = MaskRadialFactory(\"Radial gradient mask utilities for creating circular gradient-based masks\") # Create the radial gradient mask factory instance"
    ]
   },
   {
