Implement tables utilities.

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -46,7 +46,7 @@
     "│   ├── base.ipynb       # Base classes, types, and protocols for Tailwind CSS abstractions\n",
     "│   ├── resources.ipynb  # CDN resources and headers for Tailwind CSS\n",
     "│   └── testing.ipynb    # Standardized test page creation for Jupyter notebooks with FastHTML\n",
-    "└── utilities/ (11)\n",
+    "└── utilities/ (12)\n",
     "    ├── backgrounds.ipynb       # Background utilities for Tailwind CSS\n",
     "    ├── borders.ipynb           # Border utilities for Tailwind CSS\n",
     "    ├── effects.ipynb           # Shadow, opacity and other visual effect utilities for Tailwind CSS\n",
@@ -57,10 +57,11 @@
     "    ├── sizing.ipynb            # Width, height, and min/max sizing utilities for Tailwind CSS\n",
     "    ├── spacing.ipynb           # Padding and margin utilities for Tailwind CSS\n",
     "    ├── svg.ipynb               # SVG utilities for Tailwind CSS\n",
+    "    ├── tables.ipynb            # Table utilities for Tailwind CSS\n",
     "    └── typography.ipynb        # Typography utilities for Tailwind CSS\n",
     "```\n",
     "\n",
-    "Total: 26 notebooks across 4 directories"
+    "Total: 27 notebooks across 4 directories"
    ]
   },
   {
@@ -96,35 +97,36 @@
     "    utilities_sizing[utilities.sizing<br/>sizing]\n",
     "    utilities_spacing[utilities.spacing<br/>spacing]\n",
     "    utilities_svg[utilities.svg<br/>svg]\n",
+    "    utilities_tables[utilities.tables<br/>tables]\n",
     "    utilities_typography[utilities.typography<br/>typography]\n",
     "\n",
     "    builders_colors --> core_base\n",
     "    builders_scales --> core_base\n",
     "    cli_example_discovery --> cli_utils\n",
-    "    cli_explorer --> cli_example_discovery\n",
-    "    cli_explorer --> cli_pattern_scanner\n",
     "    cli_explorer --> cli_utils\n",
     "    cli_explorer --> cli_factory_extraction\n",
-    "    cli_explorer --> cli_core_utils_discovery\n",
+    "    cli_explorer --> cli_pattern_scanner\n",
+    "    cli_explorer --> cli_example_discovery\n",
     "    cli_explorer --> cli_search\n",
-    "    cli_explorer --> cli_test_code\n",
     "    cli_explorer --> cli_imports\n",
+    "    cli_explorer --> cli_test_code\n",
     "    cli_explorer --> cli_helper_discovery\n",
-    "    cli_factory_extraction --> core_base\n",
+    "    cli_explorer --> cli_core_utils_discovery\n",
     "    cli_factory_extraction --> cli_utils\n",
-    "    cli_helper_discovery --> cli_example_discovery\n",
+    "    cli_factory_extraction --> core_base\n",
     "    cli_helper_discovery --> cli_utils\n",
-    "    cli_imports --> cli_helper_discovery\n",
+    "    cli_helper_discovery --> cli_example_discovery\n",
     "    cli_imports --> cli_factory_extraction\n",
-    "    cli_imports --> cli_core_utils_discovery\n",
     "    cli_imports --> cli_utils\n",
-    "    cli_search --> cli_helper_discovery\n",
+    "    cli_imports --> cli_core_utils_discovery\n",
+    "    cli_imports --> cli_helper_discovery\n",
     "    cli_search --> cli_utils\n",
-    "    cli_search --> cli_example_discovery\n",
     "    cli_search --> cli_factory_extraction\n",
-    "    cli_test_code --> cli_helper_discovery\n",
+    "    cli_search --> cli_example_discovery\n",
+    "    cli_search --> cli_helper_discovery\n",
     "    cli_test_code --> cli_factory_extraction\n",
     "    cli_test_code --> cli_utils\n",
+    "    cli_test_code --> cli_helper_discovery\n",
     "    core_testing --> utilities_layout\n",
     "    core_testing --> utilities_flexbox_and_grid\n",
     "    core_testing --> utilities_sizing\n",
@@ -132,37 +134,39 @@
     "    core_testing --> core_base\n",
     "    core_testing --> core_resources\n",
     "    utilities_backgrounds --> core_base\n",
-    "    utilities_backgrounds --> builders_colors\n",
     "    utilities_backgrounds --> builders_scales\n",
+    "    utilities_backgrounds --> builders_colors\n",
     "    utilities_borders --> core_base\n",
-    "    utilities_borders --> builders_colors\n",
     "    utilities_borders --> builders_scales\n",
-    "    utilities_effects --> core_base\n",
+    "    utilities_borders --> builders_colors\n",
     "    utilities_effects --> builders_colors\n",
+    "    utilities_effects --> core_base\n",
     "    utilities_effects --> builders_scales\n",
-    "    utilities_filters --> core_base\n",
     "    utilities_filters --> builders_colors\n",
+    "    utilities_filters --> core_base\n",
     "    utilities_filters --> builders_scales\n",
-    "    utilities_flexbox_and_grid --> core_base\n",
     "    utilities_flexbox_and_grid --> builders_scales\n",
-    "    utilities_interactivity --> core_base\n",
+    "    utilities_flexbox_and_grid --> core_base\n",
     "    utilities_interactivity --> builders_scales\n",
+    "    utilities_interactivity --> core_base\n",
     "    utilities_interactivity --> builders_colors\n",
-    "    utilities_layout --> core_base\n",
     "    utilities_layout --> builders_scales\n",
-    "    utilities_sizing --> builders_scales\n",
+    "    utilities_layout --> core_base\n",
     "    utilities_sizing --> core_base\n",
-    "    utilities_spacing --> builders_scales\n",
+    "    utilities_sizing --> builders_scales\n",
     "    utilities_spacing --> core_base\n",
+    "    utilities_spacing --> builders_scales\n",
     "    utilities_svg --> core_base\n",
     "    utilities_svg --> builders_colors\n",
     "    utilities_svg --> builders_scales\n",
-    "    utilities_typography --> core_base\n",
+    "    utilities_tables --> core_base\n",
+    "    utilities_tables --> builders_scales\n",
     "    utilities_typography --> builders_scales\n",
+    "    utilities_typography --> core_base\n",
     "    utilities_typography --> builders_colors\n",
     "```\n",
     "\n",
-    "*62 cross-module dependencies detected*"
+    "*64 cross-module dependencies detected*"
    ]
   },
   {
@@ -174,6 +178,8 @@
     "### `cjm-tailwind-explore` Command\n",
     "\n",
     "```\n",
+    "✅ All table utilities work correctly!\n",
+    "✅ All table factory documentation is accessible!\n",
     "usage: cjm-tailwind-explore [-h]\n",
     "                            {modules,factories,factory,examples,example,helpers,helper,search,test-code,core-utils,core-util,imports,scan}\n",
     "                            ...\n",
@@ -4976,6 +4982,132 @@
     "stroke  # The stroke color factory\n",
     "STROKE_WIDTH_CONFIG\n",
     "stroke_width  # The stroke width factory\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### tables (`tables.ipynb`)\n",
+    "> Table utilities for Tailwind CSS\n",
+    "\n",
+    "#### Import\n",
+    "\n",
+    "```python\n",
+    "from cjm_fasthtml_tailwind.utilities.tables import (\n",
+    "    border_collapse,\n",
+    "    border_spacing,\n",
+    "    table_layout,\n",
+    "    caption_side,\n",
+    "    test_tables_border_collapse_examples,\n",
+    "    BorderSpacingFactory,\n",
+    "    test_tables_border_spacing_basic_examples,\n",
+    "    test_tables_border_spacing_directional_examples,\n",
+    "    test_tables_border_spacing_arbitrary_examples,\n",
+    "    test_tables_layout_examples,\n",
+    "    test_tables_caption_side_examples,\n",
+    "    test_tables_all_utilities,\n",
+    "    test_tables_practical_examples,\n",
+    "    test_tables_complex_example,\n",
+    "    test_tables_factory_documentation\n",
+    ")\n",
+    "```\n",
+    "\n",
+    "#### Functions\n",
+    "\n",
+    "```python\n",
+    "def test_tables_border_collapse_examples()\n",
+    "    \"Test border collapse utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_tables_border_spacing_basic_examples()\n",
+    "    \"Test basic border spacing utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_tables_border_spacing_directional_examples()\n",
+    "    \"Test directional border spacing utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_tables_border_spacing_arbitrary_examples()\n",
+    "    \"Test border spacing utilities with arbitrary values.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_tables_layout_examples()\n",
+    "    \"Test table layout utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_tables_caption_side_examples()\n",
+    "    \"Test caption side utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_tables_all_utilities()\n",
+    "    \"Comprehensive test of all table utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_tables_practical_examples()\n",
+    "    \"Test table utilities in practical FastHTML component examples.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_tables_complex_example()\n",
+    "    \"Test a complex table example with various styling.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_tables_factory_documentation()\n",
+    "    \"Test that table factories have accessible documentation.\"\n",
+    "```\n",
+    "\n",
+    "#### Classes\n",
+    "\n",
+    "```python\n",
+    "class BorderSpacingFactory:\n",
+    "    def __init__(self):\n",
+    "        \"\"\"Initialize with scaled factories for directional variants.\"\"\"\n",
+    "        super().__init__(\"Border spacing utilities for controlling the spacing between table borders\")\n",
+    "        # Create scaled factories with properly hyphenated prefixes\n",
+    "        self._base = ScaledFactory(\"border-spacing\", SPACING_CONFIG, \"All sides border spacing\")\n",
+    "        self.x = ScaledFactory(\"border-spacing-x\", SPACING_CONFIG, \"Horizontal border spacing\")\n",
+    "        self.y = ScaledFactory(\"border-spacing-y\", SPACING_CONFIG, \"Vertical border spacing\")\n",
+    "    \n",
+    "    def __call__(\n",
+    "        self,\n",
+    "        value: Optional[TailwindScale] = None  # The spacing value\n",
+    "    ) -> StandardUtility:  # A border spacing utility for all sides\n",
+    "    \"Factory for border-spacing utilities with directional support.\"\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "            \"\"\"Initialize with scaled factories for directional variants.\"\"\"\n",
+    "            super().__init__(\"Border spacing utilities for controlling the spacing between table borders\")\n",
+    "            # Create scaled factories with properly hyphenated prefixes\n",
+    "            self._base = ScaledFactory(\"border-spacing\", SPACING_CONFIG, \"All sides border spacing\")\n",
+    "            self.x = ScaledFactory(\"border-spacing-x\", SPACING_CONFIG, \"Horizontal border spacing\")\n",
+    "            self.y = ScaledFactory(\"border-spacing-y\", SPACING_CONFIG, \"Vertical border spacing\")\n",
+    "        \n",
+    "        def __call__(\n",
+    "            self,\n",
+    "            value: Optional[TailwindScale] = None  # The spacing value\n",
+    "        ) -> StandardUtility:  # A border spacing utility for all sides\n",
+    "        \"Initialize with scaled factories for directional variants.\"\n",
+    "    \n",
+    "    def get_info(\n",
+    "            self\n",
+    "        ) -> Dict[str, Any]:  # Dictionary with factory information\n",
+    "        \"Get information about the border spacing factory.\"\n",
+    "```\n",
+    "\n",
+    "#### Variables\n",
+    "\n",
+    "```python\n",
+    "border_spacing  # The border spacing factory\n",
     "```"
    ]
   },
